--- a/docs/sql/sfmc-sql-snippet-debugging-value-length.mdx
+++ b/docs/sql/sfmc-sql-snippet-debugging-value-length.mdx
@@ -2,28 +2,30 @@
 id: sfmc-sql-snippet-debugging-value-length
 title: SFMC SQL Debugging Value Length
 sidebar_label: Debugging Value Length
-description: Work in progres.
+description: Your Automations crash due to longer than expected values? Make your life easier with SQL.
 ---
 
 import { LeadText } from '../../src/components/LeadText.js';
 
-<LeadText content='Work in progres.' />
+<LeadText content='Your Automations crash due to longer than expected values? Make your life easier with SQL.' />
 
 ## Problem
 
-Working with Marketing Cloud (or any other Marketing Automation Platform) is always the dance between optimisation and flexibility. This is easily visible when working with SFMC Data Extensions.
+Working with Marketing Cloud (or any other Marketing Automation Platform) is always the dance between optimisation and flexibility. It is easily visible when working with SFMC Data Extensions.
 
-On the one hand, limiting the maximum field length is a must-have best practice. Salesforce recommends keeping the total sum of maximum length of all fields under 4000 characters. For many use cases it is really small number. But if you want to have lean data sources that can be queries quickly, that is the only way. And in the Marketing Cloud, nearly everything is a query - even if you don't write a line of SQL.
+On the one hand, limiting the maximum field length is a must-have best practice. Salesforce recommends keeping the total sum of all fields length under 4000 characters. For many use cases, a tiny number. But if you want to have lean Data Extensions to query them quickly, it is the only way. And in the Marketing Cloud, nearly everything is a query - even if you don't write a line of SQL.
 
-On the other hand, it might be really hard to limit your Data Extension so much with real life needs. Especially when you are bringing data from other systems. Example? Salesforce CRM integration through Marketing Cloud Connect. The evergreen Picklist fields from CRM are brought to Synchronized Data Extensions as 255 character text fields. Even, if the picklist has only one-digit values associated with it. Few such picklists brings you right to the total sum limit recommended by Salesforce.
+On the other hand, it might be tough to limit your Data Extension so much with real-life needs. Especially when you are bringing data from other systems. Example? Salesforce CRM integration through Marketing Cloud Connect. The Picklist fields from CRM come to Synchronized Data Extensions as 255 character text fields 0 even if it has only one-digit values associated with it. Select a few such picklists, and you hit the Data Extension character length limit recommended by Salesforce.
 
-What to do with that? Limit the maximum length of those picklists in the Marketing Cloud Data Extension. You are sure that your Gender field will always have one character value (`F`/`M`/`O`/`U`)? Let's make maximum length equal to 1. It is great, but sometimes, you might be surprised - especially with less obvious picklists. Simillar issues might also come from standard text fields.
+What to do with that?
 
-Once you build your Data Extension and maybe also Profile Attributes with the optimisation in mind, you will need to pull the data (from Synchronized Data Extensions or FTP) to them.
+Limit the maximum length of those picklists in the Marketing Cloud Data Extension. You are sure that your Gender field will always have one character value (`F`/`M`/`O`/`U`)? Let's make maximum length equal to 1. It is excellent, but sometimes, you might be surprised - especially with less obvious picklists. Similar issues might also come from standard text fields.
 
-All good, until one of the values exceeds the maximum length you set for the field. The automation crashes with cryptic error that tells you nothing and can push you for long crudase to find the culprit.
+Once you build your Data Extension with those optimisations in mind, it is time to pull the data from Synchronized Data Extensions.
 
-What can you do to solve this problem?
+All good, until one of the values, exceed the maximum length you set for the field. The Automation crashes with a cryptic error that tells you nothing and can push you for a long crusade to find the culprit.
+
+How can you solve this problem?
 
 ## Short Term Solution
 
@@ -46,41 +48,41 @@ If you are running those queries from the child Business Unit, add `ENT.` prefix
 
 :::
 
-This query will output one row of data with the current maximum length of the values that you have in your Synchronized Data Extension for the selected fields. It uses [`MAX`](./sfmc-sql-numeric-functions.mdx#min-and-max) function on the outcome of the [`LEN`](./sfmc-sql-string-functions.mdx#len) to find the single maximum length available across all records. It has two great uses:
+This query will output one row of data with the current maximum length of the values that you have in your Synchronized Data Extension for the selected fields. It uses [`MAX`](./sfmc-sql-numeric-functions.mdx#min-and-max) function on the [`LEN`](./sfmc-sql-string-functions.mdx#len) outcome to find the single maximum length available across all records. It has two great uses:
 
 ### Discovery with MAX LEN
 
-You can use it even before configuring the Data Extension and Profile Attributes to make a discovery of your real data.
+You can use it even before configuring the Data Extension and Profile Attributes to analyse your real-life data.
 
-For example, if out of your whole database, the longest First Name is 33 characters, then you will probably be just fine with maximum length of 40 on this field. If a picklist field will return you 5 with this query - you won't need the default 255 characters.
+For example, if out of your whole database, the longest First Name is 33 characters, you will probably be just fine with a maximum length of 40 on this field. If a picklist field returns you 5 with this query - you won't need the default 255 characters.
 
-Of course, as mentioned above, the values might get longer in the future. But as Marketing Cloud allows you to change maximum field length up but not down, it might be good idea to try as low as reasonable and leave space for growth.
+Of course, as mentioned above, the values might get longer in the future. But as Marketing Cloud allows you to change maximum field length up but not down, it might be a good idea to try as low as reasonable and leave space for growth.
 
 ### Debugging with MAX LEN
 
-Second use of the above snippet is quick debugging when an error occurs. Execute it in [Query Studio](./sfmc-sql-basics.mdx#query-studio) and compare against the column lengths you set up in your Data Extension. If you see in Query Studio any value that is longer than the maximum you set up in Data Extension - you found a culprit.
+The second use of the above snippet is quick debugging when an error occurs. Execute it in [Query Studio](./sfmc-sql-basics.mdx#query-studio) and compare against the column lengths you set up in your Data Extension. If you see in Query Studio any value longer than the maximum you set up in Data Extension - you found a culprit.
 
 Now you can look in the data source and check whether this longer-than-expected value is correct. If yes, it is time to update your maximum length in the Data Extension and Profile Attribute configuration.
 
 :::note You Should Know
 
-In most cases, field length of 255 should be more then enough. But if you need it, Marketing Cloud allows you to go up to 4000 characters per field.
+In most cases, the field length of 255 should be more than enough. But if you need it, Marketing Cloud allows you to go up to 4000 characters per field.
 
-4000 characters length of course is instant way of getting over the recommended limit, but might be useful for logging Data Extensions that won't be queried. For example, if you want to save [`_Bounce` Data View](../config/sfmc-config-system-data-views.mdx#_bounce) to standard Data Extension, `SMTPBounceReason` might make use of such a long field.
+4000 characters length is an instant way of getting over the recommended limit, but it might be useful for logging Data Extensions that you won't query in the future. For example, if you want to save [`_Bounce` Data View](../config/sfmc-config-system-data-views.mdx#_bounce) to standard Data Extension, `SMTPBounceReason` might use such a long field.
 
-If you need even more, there is a trick reported by [Markus Slabina](https://salesforce.stackexchange.com/questions/154402/data-extension-maximum-characters-of-text-field/154403). Use Email Studio to add a new field and make the length empty. Save. It will create a [`nvarchar(max)`](./sfmc-sql-conversion-functions.mdx#data-types) field that allows absurdly long data to be stored.
+If you need more, there is a trick reported by [Markus Slabina](https://salesforce.stackexchange.com/questions/154402/data-extension-maximum-characters-of-text-field/154403). Use Email Studio to add a new field and make the length empty. Save. It will create a [`nvarchar(max)`](./sfmc-sql-conversion-functions.mdx#data-types) field that allows absurdly long data to be stored.
 
 Remember that:
 
 1. It works only in Email Studio - Contact Builder won't work
-2. It is workaround and might disappear in any moment
-3. It shouldn't be used unless it is the only option
+2. It is a workaround and might disappear at any moment
+3. You shouldn't use it unless there is no other option
 
 :::
 
 ## Basic Long Term Solution
 
-The snippet above is nice, but good only for short term manual checks. And manual checks doesn't sound good for the long term. If you wonder whether there is a way to automate it nicely, you are here for a treat.
+The snippet above is nice but suitable only for short term manual checks. And you don't want to perform manual checks for the long term. If you wonder whether there is a way to automate it nicely, you are here for a treat.
 
 Yes, you can automate such validation by using two additional Activities.
 
@@ -106,17 +108,17 @@ WHERE 18 - LEN(c.Id) < 0
 
 Of course, you will want to adapt it to your needs. Change the fields along with their names and lengths. Select the right Synchronized Data Extension. How? Let's dive in what this code does so that you can make it your own.
 
-First field we [`SELECT`](./sfmc-sql-select.mdx) is the Unqiue Identifier (Contact ID / Subscriber Key or other based on the specific object you are validating). It is useful to quickly know which record(s) should be checked if you encounter some values that exceed the expectations.
+The first field we [`SELECT`](./sfmc-sql-select.mdx) is the Unique Identifier (Contact ID / Subscriber Key or other based on the specific object you are validating). It is useful to quickly know which record(s) should you checked when some values lengths exceed the expectations.
 
-After that you can see the standard [`FROM`](./sfmc-sql-from.mdx) statement. If needed, you can of course [`JOIN`](./sfmc-sql-join.mdx) additional data sources.
+After that, you can see the standard [`FROM`](./sfmc-sql-from.mdx) statement. You can, of course, [`JOIN`](./sfmc-sql-join.mdx) additional data sources.
 
-Finally, there is a [`WHERE`](./sfmc-sql-where.mdx) statement. In it, we are checking whether at least one field on each record have a value longer then expected. So to adapt it - change the number on the left to the length of the field you set up in the target Data Extension / Profile Attribute.
+Finally, there is a [`WHERE`](./sfmc-sql-where.mdx) statement. In it, we are checking whether at least one field on each record has a value longer than expected. To adapt it - change the number on the left to the length of the field you set up in the target Data Extension / Profile Attribute.
 
-This SQL Query Activity should output the rows to a technical Value Length Data Extension that has all the same columns as the target Data Extension / Profile Attributes list. However, it can have much shorter max lengths for the columns, as all fields but the Unique Identifier one will output only the length of the field (up to 4 digits). Configure the SQL Activity to Overwrite the technical Data Extension, to always have there the data for the latest state.
+This SQL Query Activity should output the rows to a technical Value Length Data Extension with all the same columns as the target Data Extension / Profile Attributes list. However, it can have much shorter max lengths for the columns, as all fields but the Unique Identifier one will output only the field's length (up to 4 digits). Configure the SQL Activity to Overwrite the technical Data Extension and always have the data for the latest state.
 
-Right after this SQL Query Activity add Verification Activity and configure it to check the technical Data Extension mentioned above. If there is any row in it - it should stop the whole Automation and send an alert email to the Marketing Cloud Administrator.
+Right after this SQL Query Activity add Verification Activity and configure it to check the technical Data Extension mentioned above. If there is any row in it - it should stop the whole Automation and send an alert email to the Marketing Cloud administrator.
 
-To sum up, the sample Automation could look like this:
+To sum up, sample Automation could look like this:
 
 1. SQL Query Activity with the Debugging Value Length query
 2. Verification Activity that checks Value Length Data Extension
@@ -125,17 +127,17 @@ To sum up, the sample Automation could look like this:
 5. Transfer Activity
 6. Import Activity
 
-With the last three being the classic ETL for updating the All Subscribers view and Profile Attributes.
+The last three Activities above are the classic ETL group for updating the All Subscribers and Profile Attributes.
 
-Such setup won't silently crash your Automation whenever there is a single value longer then expected. It will stop the Automation before the crash and inform the Administrator that there is an issue and provide exact Unique Identifiers of records that are leading to that error for easy check. Neat, right? Well, it can be even better.
+Such setup won't silently crash your Automation whenever there is a single value longer than expected. It will stop the Automation before the crash, inform the administrator that there is an issue and provide Unique Identifiers of records leading to that error for an easy check. Neat, right? Well, it can be even better.
 
 ## Options
 
-The basic version above is already nice, but we can make few improvements to it to make Administrators live easier.
+The basic version above is already lovely, but we can make a few improvements to make the administrator's life even easier.
 
-### Show which field has too long value
+### Show fields with too long value
 
-Previously shown query will show the problematic record, but it will display all field lengths for it. Administrator will still have to compare the lengths to find which one is the source of the issue.
+Previously shown query will show the problematic record, but it will display all field lengths for it. The administrator will still have to compare the lengths to find which one is the issue's source.
 
 However, we already are coding the expected field length in the [`FROM`](./sfmc-sql-from.mdx) part of the query. Why not use it to make life easier?
 
@@ -148,9 +150,9 @@ Let's change the `LEN(c.Id) AS [Subscriber Key],` in the [`SELECT`](./sfmc-sql-s
     END AS [Subscriber Key],
 ```
 
-As you can see, we changed simple line to a more complex [`CASE`](./sfmc-sql-select#conditional-values-with-case) statement. There is a good reason for it. Thanks to it, the query will evaluate each field against the expected length and in the Value Length Data Extension display information only for the problematic values.
+As you can see, we changed a simple line to a more complex [`CASE`](./sfmc-sql-select#conditional-values-with-case) statement. There is a good reason for it. Thanks to it, the query will evaluate each field against the expected length and in the Value Length Data Extension display information only for the problematic values.
 
-Administrator will no longer have to compare each field with configured maximum - he will see it directly in the Data Extension, which saves time and limits the errors.
+The administrator will no longer have to compare each field with configured maximum - he will see it directly in the Data Extension, which saves time and limits the errors.
 
 ### Extended length information
 
@@ -163,13 +165,13 @@ CASE
 END AS [Subscriber Key]
 ```
 
-Here, apart from the length of the problematic field, we are also showing by how much it exceeds the current configuration.
+Here, apart from the problematic field's length, we are also showing by how much it exceeds the current configuration.
 
-For example, if we expect the First Name to be under 40 characters and one record comes with 46 characters one, the previous solution would just output `46`. This extended one will be a bit more verbose by showing `46 (6 over limit)`.
+For example, if we expect the First Name to be under 40 characters and one record comes with 46 characters, the previous solution would output `46`. This extended one will be a bit more verbose by showing `46 (6 over limit)`.
 
-Remember that if you implement this option, it will impact the output length in your technical Data Extension. 4 characters will be no longer enough. Instead, set it to 22.
+Remember that if you implement this option, it will impact the output length in your technical Data Extension. 4 characters will be no longer enough. 22, however, will work like a charm.
 
-## Fully fledged Long Term Solution
+## Fully-fledged Long Term Solution
 
 After applying both of the above options to the [Basic SQL Snippet](basic-long-term-solution), it looks like this:
 
