Update to subheader of Debugging Email Sends

--- a/docs/sql/sfmc-sql-snippet-debugging-email-sends.mdx
+++ b/docs/sql/sfmc-sql-snippet-debugging-email-sends.mdx
@@ -9,7 +9,7 @@ import { LeadText } from '../../src/components/LeadText.js';
 
 <LeadText content='Make finding problems with email delivery in Salesforce Marketing Cloud great again. SQL with the Query Studio to the rescue.' />
 
-## Problem
+## Problem with straightforward Email Send analysis
 
 Deliverability issues, unfortunately, are a standard both during the Salesforce Marketing Cloud implementation phase, as well as after the go-live.
 
